[package]
name = "tungsten"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.5.0"

flate2 = "1.0.28"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

clap = "4.5.2"
sha2 = "0.10.8"
